FulfillmentPeriodValidator bevezetése osztály validátor helyett Összes anyag törlése a ticketből Sonarlint javítások Tesztek a validátorokra